fix overflow-x in mobile

--- a/app/less/post.less
+++ b/app/less/post.less
@@ -45,6 +45,8 @@ article {
         pre {
             padding: 1rem;
             overflow-x: auto;
+            word-wrap: normal;
+            -webkit-overflow-scrolling: touch;
             line-height: 1.2rem;
             code {
                 background: transparent;
